# aptos-tools-copy

./: README.md
.history/: Cargo_20220804170142.toml  Cargo_20220804173630.toml
.history/deploy/: Cargo_20220804172509.toml  Cargo_20220804172523.toml  Cargo_20220804172527.toml
.history/deploy/src/: lib_20220804172608.rs  lib_20220804172611.rs  lib_20220804172613.rs  main_20220804172713.rs  main_20220804172714.rs  main_20220804172730.rs  main_20220804172732.rs  main_20220804172734.rs  main_20220804172735.rs  main_20220804172748.rs  main_20220804172757.rs  (+122 more)
.history/src/: lib_20220804170220.rs  lib_20220804170223.rs  lib_20220804170229.rs  lib_20220804170234.rs  lib_20220804170238.rs  lib_20220804170242.rs  lib_20220804170244.rs  lib_20220804170248.rs  lib_20220804170252.rs  lib_20220804170256.rs  lib_20220804170259.rs  lib_20220804170304.rs  lib_20220804170306.rs  lib_20220804170310.rs  lib_20220804170313.rs  lib_20220804170316.rs  lib_20220804170324.rs  lib_20220804170327.rs  lib_20220804170336.rs  lib_20220804170347.rs  lib_20220804170351.rs  lib_20220804170353.rs  lib_20220804170404.rs  lib_20220804170411.rs  lib_20220804170414.rs  lib_20220804170416.rs  lib_20220804170417.rs  lib_20220804170419.rs  lib_20220804170423.rs  lib_20220804170426.rs  lib_20220804170427.rs  lib_20220804170432.rs  lib_20220804170434.rs  lib_20220804170437.rs  lib_20220804170439.rs  lib_20220804170446.rs  lib_20220804170450.rs  lib_20220804170452.rs  lib_20220804170459.rs  lib_20220804170504.rs  (+46 more)
deploy/: Cargo.toml  message.mv
deploy/src/: lib.rs
hello_blockchain/: Cargo.toml
(+18 files in other folders)
