[package]
name = "deploy"
version = "0.0.1"
publish = false
edition = "2018"

[dependencies]
first-transaction = { path = "../first_transaction" }
hex = "0.4.3"
serde_json = "1.0.82"
ed25519-dalek = { version = "0.1.0", package = "ed25519-dalek-fiat", default-features = false, features = ["std", "serde", "fiat_u64_backend"] }
