[package]
name = "hello-blockchain"
version = "0.0.1"
authors = ["Aptos Labs <opensource@aptoslabs.com>"]
description = "Aptos Rust tutorial files: Hello Blockchain"
repository = "https://github.com/aptos-labs/aptos-core"
homepage = "https://aptoslabs.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
first-transaction = { path = "../first_transaction" }
hex = "0.4.3"
serde_json = "1.0.82"
ed25519-dalek = { version = "0.1.0", package = "ed25519-dalek-fiat", default-features = false, features = ["std", "serde", "fiat_u64_backend"] }
